# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md
.github/workflows/: cpack.yml  linux.yml  linux.yml.old
examples/: example2.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
include/: print.hpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
sources/: print.cpp
tests/: test1.cpp
tests/banking/: test_transaction.cpp
